--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/vision": "^3.82.0",
     "next": "15.2.4",
     "next-sanity": "^9.9.9",
     "react": "^19.0.0",
