--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-sanity": "^9.9.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sanity": "^3.82.0"
+    "sanity": "^3.82.0",
+    "sanity-plugin-media": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
