--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/vision": "^3.82.0",
     "next": "15.2.4",
     "next-sanity": "^9.9.9",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.82.0",
@@ -19,13 +20,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.2",
     "typescript": "^5"
   }
 }
